--- a/templates/about.html
+++ b/templates/about.html
@@ -24,7 +24,7 @@
         convert to uppercase ,lowercase etc.The project is made by Jobanpreet Singh and Jashneet Kaur students of M.Tech(AI). 
         <br><br>
     </h3>
-    <a href="">Click Here to see code</a>
+    <a href="https://github.com/jobanpreet495/string-operations-in-python">Click Here to see code</a>
     
     </div>
 
